--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 
   <section>
     <div class="card">
-      <div class="image">
-        <a href="#"> <img src="images/image-equilibrium.jpg" class="image-equilibrium" alt="equilibrium"></a>
+      <div class="image-container">
+        <a href="#" > <img  class="image_img"src="images/image-equilibrium.jpg" class="image-equilibrium" alt="equilibrium"></a>   
+         <div class="image--overlay">
+          <a href="#"> <img class="image__content" src="images/icon-view.svg" class="image-equilibrium" alt="equilibrium"></a>
+        </div>
       </div>
 
-      <span class="title"><h1><a href="#">Equilibrium #3429</a> </h1></span>
+      <h1><a href="#">Equilibrium #3429</a> </h1>
       <span class="desc">Our Equilibrium collection promotes balance and calm</span>
 
       <div class="details">
@@ -36,12 +39,10 @@
       </div>
     
     </div>
-  </section>
-  <!-- <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#"> Jaycee</a>.
     </div>
-  </footer> -->
+  </section>
 </body>
 </html>
