--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#"> Jaycee</a>.
+      Coded by <a href="https://github.com/simplyJC/nft-preview-card-component-main"> Jaycee</a>.
     </div>
   </section>
 </body>
