--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 </head>
 <body>
-
-  <section>
+  <main>
     <div class="card">
       <div class="image-container">
         <a href="#" > <img  class="image_img"src="images/image-equilibrium.jpg" class="image-equilibrium" alt="equilibrium"></a>   
@@ -35,7 +34,7 @@
       <div class="creator-name">
           
          <img src="images/image-avatar.png" alt="avatar" class="avatar">
-        <span class="creator">Creation of <span class="name">Jules Wyvern</span></span>
+        <span class="creator">Creation of <span class="name"><a href="#">Jules Wyvern</a></span></span>
       </div>
     
     </div>
@@ -43,6 +42,6 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/simplyJC/nft-preview-card-component-main"> Jaycee</a>.
     </div>
-  </section>
+  </main>
 </body>
 </html>
